--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "dependencies": {
     "@types/lodash": "4.14.149",
     "emotion": "10.0.27",
+    "i18next": "19.4.4",
+    "i18next-browser-languagedetector": "4.1.1",
     "lodash": "4.17.15",
     "moment": "2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-i18next": "11.4.0",
     "react-scripts": "3.4.0"
   },
   "devDependencies": {
