--- a/scraper/package.json
+++ b/scraper/package.json
@@ -4,8 +4,11 @@
   "main": "index.js",
   "author": "sawyerhood",
   "license": "MIT",
-  "dependencies": {
-    "image-downloader": "^3.5.0",
-    "puppeteer": "^2.1.1"
+  "dependencies": {},
+  "devDependencies": {
+    "csv": "^5.3.2",
+    "fast-csv": "^4.1.6",
+    "image-downloader": "^4.0.1",
+    "puppeteer": "^3.1.0"
   }
 }
