--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "emotion": "10.0.27",
     "i18next": "19.4.4",
     "i18next-browser-languagedetector": "4.1.1",
-    "lodash": "4.17.15",
+    "lodash": "^4.17.19",
     "moment": "2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
