--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "",
   "keywords": [],
   "main": "src/index.tsx",
+  "repository": "git+https://github.com/SawyerHood/animal-crossing-catch.git",
+  "homepage": "https://github.com/SawyerHood/animal-crossing-catch",
+  "bugs": {
+    "url": "https://github.com/SawyerHood/animal-crossing-catch/issues"
+  },
   "dependencies": {
     "@types/lodash": "4.14.149",
     "emotion": "10.0.27",
