--- a/package.json
+++ b/package.json
@@ -5,29 +5,30 @@
   "keywords": [],
   "main": "src/index.tsx",
   "repository": "git+https://github.com/SawyerHood/animal-crossing-catch.git",
-  "homepage": "https://github.com/SawyerHood/animal-crossing-catch",
+  "homepage": "https://ac-catch.com",
   "bugs": {
     "url": "https://github.com/SawyerHood/animal-crossing-catch/issues"
   },
   "dependencies": {
-    "@types/lodash": "4.14.149",
-    "emotion": "10.0.27",
-    "i18next": "19.4.4",
-    "i18next-browser-languagedetector": "4.1.1",
-    "lodash": "^4.17.19",
-    "moment": "2.24.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-i18next": "11.4.0",
-    "react-scripts": "3.4.1"
+    "@emotion/css": "^11.1.3",
+    "@types/lodash": "4.14.168",
+    "emotion": "11.0.0",
+    "i18next": "19.9.2",
+    "i18next-browser-languagedetector": "6.0.1",
+    "lodash": "^4.17.21",
+    "moment": "2.29.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-i18next": "11.8.10",
+    "react-scripts": "^4.0.3"
   },
   "devDependencies": {
-    "@types/react": "16.9.19",
-    "@types/react-dom": "16.9.5",
-    "husky": ">=4",
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.2",
+    "husky": ">=5",
     "lint-staged": ">=10",
-    "prettier": "^2.0.5",
-    "typescript": "3.7.5"
+    "prettier": "^2.2.1",
+    "typescript": "4.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,13 +41,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,css,md,ts,tsx,json}": "prettier --write"
-  }
+  ]
 }
