--- a/package.json
+++ b/package.json
@@ -19,27 +19,31 @@
     "moment": "2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-i18next": "11.8.10",
-    "react-scripts": "^4.0.3"
+    "react-i18next": "11.8.10"
   },
   "devDependencies": {
     "@types/react": "17.0.3",
     "@types/react-dom": "17.0.2",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
     "husky": ">=5",
     "lint-staged": ">=10",
     "prettier": "^2.2.1",
-    "typescript": "4.2.3"
+    "typescript": "4.2.3",
+    "vite": "^2.1.2",
+    "vite-plugin-svgr": "^0.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview"
   },
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "eslintConfig": {
+    "extends": "react-app"
+  }
 }
